# lekton

./: .dockerignore  .env.example  .gitignore  .panproject.toml  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.rs  build_ssr.err  deny.toml  docker-compose.demo.yml  docker-compose.yml  index.html  justfile  package-lock.json  package.json  playwright.config.ts
.github/workflows/: deny.yml  docker-publish.yml  e2e-tests.yml  format.yml  integration-tests.yml  publish.yml
cli/: Cargo.toml  Dockerfile  README.md
cli/src/: main.rs
config/: default.toml
demo/: garage-init.sh  garage.toml  load_demo.sh
demo/documents/: architecture.md  deployment-guide.md  getting-started.md  security-rbac.md
demo/prompts/: architecture-analysis.txt  code-review.txt  git-history-sanitizer.txt
demo/schemas/: inventory-service-api-v1.json  order-events-v1.json  payment-service-api-v1.json  payment-service-api-v2.json
demo_data/: api_reference.md  architecture.md  getting_started.md
docs/: .gitignore  ACTION_PLAN.md  IMPLEMENTATION_ROADMAP.md  PROMPT_LIBRARY_SPEC.md  REQUIREMENTS.md  advanced_chunking_activities.md  advanced_rag_activities.md  advanced_rag_architecture.md  operations.md  rag-evaluation.md
docs/ADRs/: 001-initial-architecture.md  README.md
docs/enhancements/: 001-source-references.md  002-configurable-retrieval.md  003-episodic-memory.md  004-token-aware-chunking.md  005-hyde-query-expansion.md  006-embedding-rate-limiting.md  007-reindex-push-notifications.md
docs/tickets/authentication/: 001-authorization-server-metadata-and-discovery-contract.md  002-token-introspection-contract-for-mcp-resource-servers.md  003-subject-mapping-and-authorization-model-contract.md  004-oauth-scope-contract-for-lekton-mcp-capabilities.md  005-end-to-end-development-smoke-flow-support.md  README.md
e2e/: auth.spec.ts  chat.spec.ts  document.spec.ts  editor.spec.ts  global-setup.ts  home.spec.ts  mermaid.spec.ts  navigation.spec.ts  schemas.spec.ts  search.spec.ts  theme.spec.ts
e2e/helpers/: auth.ts
eval/: queries.jsonl
eval/configs/: baseline.toml  expand-to-parent.toml  hybrid-rrf.toml  larger-chunks.toml  smaller-chunks.toml
eval/docs/: api-reference.md  architecture.md  deployment-guide.md
examples/themes/: README.md  github-dark.css  nord.css  solarized-light.css
public/: custom-comelit.css  custom.css
public/js/: editor-assets.js  login.js  mermaid-loader.js
scripts/: reindex-search-simple.sh  reindex-search.py  reindex-search.sh  setup-dev-env.sh
src/: app.rs  auth.rs  config.rs  demo_seeder.rs  error.rs  lib.rs  main.rs  state.rs  static_assets.rs  test_utils.rs
src/api/: admin.rs  assets.rs  auth.rs  errors.rs  health.rs  ingest.rs  mcp.rs  mod.rs  pat.rs  prompts.rs  rag.rs  schemas.rs  search.rs  sync.rs  token_validation.rs  upload.rs
src/auth/: config.rs  demo_auth.rs  extractor.rs  middleware.rs  mod.rs  models.rs  provider.rs  refresh_client.rs  token_service.rs
src/components/: contextual_sidebars.rs  custom_css.rs  diagnostics.rs  document_view.rs  editor.rs  layout.rs  logo.rs  markdown_content.rs  mod.rs  navigation.rs  search.rs  search_bar.rs  theme.rs  user_menu.rs
src/db/: access_level_repository.rs  asset_repository.rs  auth_models.rs  chat_models.rs  chat_repository.rs  document_version_repository.rs  documentation_feedback_models.rs  documentation_feedback_repository.rs  embedding_cache_repository.rs  feedback_repository.rs  migration.rs  migrations.rs  mod.rs  models.rs  navigation_order_repository.rs  prompt_models.rs  prompt_repository.rs  prompt_version_repository.rs  repository.rs  schema_repository.rs  service_token_models.rs  service_token_repository.rs  settings_repository.rs  user_prompt_preference_repository.rs  user_repository.rs
src/editor/: asset_panel.rs  component.rs  mod.rs
src/jobs/: mod.rs  recompute_access_levels.rs
src/mcp/: auth.rs  mod.rs  server.rs
src/models/: document.rs  link_validator.rs  search.rs
src/pages/: admin_settings.rs  chat.rs  doc.rs  home.rs  login.rs  mod.rs  not_found.rs  profile.rs  prompts.rs
src/rag/: analyzer.rs  cached_embedding.rs  chat.rs  client.rs  embedding.rs  eval.rs  hyde.rs  mod.rs  provider.rs  query_rewriter.rs  reindex.rs  reranker.rs  rrf.rs  service.rs  splitter.rs  splitter_blocks.rs  splitter_mermaid.rs  splitter_sections.rs  splitter_table.rs  vectorstore.rs
src/rendering/: links.rs  markdown.rs  mod.rs
src/schema/: component.rs  mod.rs  reindex.rs
src/search/: client.rs  mod.rs  reindex.rs  tenant_token.rs
src/server/: access_levels.rs  auth_fns.rs  custom_css.rs  docs.rs  feedback.rs  mod.rs  nav.rs  pats.rs  prompts.rs  reindex.rs  search.rs  service_tokens.rs  users.rs
src/storage/: client.rs
style/: main.scss  tailwind.css
tests/: config_test.rs  test_access_level_repository.rs  test_admin.rs  test_assets.rs  test_auth.rs  test_auth_oidc.rs  test_cross_feature.rs  test_document_lifecycle.rs  test_document_metadata.rs  test_document_versioning.rs  test_ingest.rs  test_rag.rs  test_schemas.rs  test_search.rs  test_service_tokens.rs  test_settings.rs  test_sync.rs  test_upload.rs
tests/common/: mod.rs
