[package]
name = "lekton"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"], optional = true }
leptos = { version = "0.7", features = ["ssr"] }
leptos_axum = "0.7"
leptos_router = "0.7"
leptos_meta = "0.7"
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = { version = "3", features = ["bson-3"], optional = true }
bson = { version = "3", features = ["chrono-0_4"] }
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }
openidconnect = { version = "3.5", optional = true }
pulldown-cmark = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
http = "1"
reqwest = { version = "0.12", features = ["json"] }
tower-sessions = { version = "0.13", optional = true }
meilisearch-sdk = { version = "0.27", optional = true }
leptos-tiptap = { version = "0.8", optional = true }
markdown = { version = "1.0.0-alpha.18", optional = true }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:mongodb",
    "dep:aws-sdk-s3",
    "dep:aws-config",
    "dep:openidconnect",
    "dep:tracing-subscriber",
    "dep:tower-sessions",
    "dep:meilisearch-sdk",
    "dep:leptos-tiptap",
    "dep:markdown",
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the binary name
output-name = "lekton"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild.
# Use an absolute path or a path relative to the Cargo.toml
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to "pkg"
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into the main css file. This file will be put at <site-root>/<site-pkg-dir>/app.css
style-file = "style/main.scss"
# [Optional] Assets source dir. All files in this directory will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
assets-dir = "public"
# The IP and port (eg: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running tests.
# If not specified, cargo test will be used.
test-args = ["--lib", "--tests"]
# [Optional] Specify the bin-output-path if the binary output path is different from the target/site-root/bin-name
# bin-output-path = "target/debug/test-bin"
# [Optional] Custom environment variables to set when building or running.
# env = [{ name = "KEY", value = "VALUE" }]
# [Optional] The command to run when building.
# build-command = "cargo run --bin build-app"
# [Optional] The command to run when serving.
# serve-command = "cargo run"
# [Optional] The command to run when watching.
# watch-command = "cargo leptos watch"
