[workspace]
members = [".", "cli"]
resolver = "2"

[package]
name = "lekton"
version = "0.14.3"
authors = ["Davide Ghilardi"]
edition = "2021"
license = "AGPL-3.0-or-later"
default-run = "lekton"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lekton"
path = "src/main.rs"

[[bin]]
name = "rag-eval"
path = "src/bin/rag_eval.rs"
required-features = ["ssr"]

 [dependencies]
# Leptos ecosystem
leptos = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }

# Web framework
axum = { version = "0.8", features = ["macros"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors"], optional = true }
axum-extra = { version = "0.10", features = ["cookie"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Auth (OIDC)
openidconnect = { version = "4", optional = true }

# Database
mongodb = { version = "3", optional = true }
bson = { version = "2", features = ["chrono-0_4"] }

# Storage (S3)
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

# Markdown rendering
pulldown-cmark = { version = "0.13" }

# Search
meilisearch-sdk = { version = "0.32", optional = true }
jsonwebtoken = { version = "10", optional = true }

# RAG (Retrieval-Augmented Generation)
qdrant-client = { version = "1", optional = true }
async-openai = { version = "0.35", features = ["embedding", "chat-completion"], optional = true }
gcp_auth = { version = "0.12.6", optional = true }
rustls = { version = "0.23", features = ["aws-lc-rs"], optional = true }
text-splitter = { version = "0.30", features = ["markdown", "tiktoken-rs"], optional = true }
tiktoken-rs = { version = "0.11", optional = true }
tera = { version = "1", optional = true }

# MCP (Model Context Protocol)
rmcp = { version = "1.3", features = ["server", "transport-streamable-http-server"], optional = true }
schemars = { version = "0.8", optional = true }

# Rich text editor
leptos-tiptap = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Async traits
async-trait = "0.1"

# Async utilities
futures = "0.3"
async-stream = { version = "0.3", optional = true }

# Encoding
base64 = "0.22"
rand = "0.9"

# Unique ID generation
uuid = { version = "1", features = ["v4"] }

# Hashing (for content hash computation and refresh token storage)
sha2 = "0.11"

# Time
chrono = { version = "0.4", features = ["serde"] }

# WASM
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Performance",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Response",
    "RequestInit",
    "RequestMode",
    "Headers",
    "TextDecoder",
], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
gloo-timers = { version = "0.4", features = ["futures"], optional = true }
gloo-net = { version = "0.7", features = ["http"], optional = true }

# HTTP client (for OIDC discovery)
reqwest = { version = "0.12", features = ["json"], optional = true }

# URL encoding (for OAuth2 query parameters)
urlencoding = { version = "2", optional = true }

# Cookie duration (re-exported by axum-extra transitively)
time = { version = "0.3", optional = true }

# Rate limiting
tower_governor = { version = "0.8", optional = true }

# Configuration management
config = { version = "0.14", optional = true }

[build-dependencies]
leptos-tiptap-build = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
mockall = "0.14"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mongo", "minio", "meilisearch"] }
axum-test = "20"
cookie = "0.18"

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:serde-wasm-bindgen",
    "dep:gloo-timers",
    "dep:gloo-net",
]
ssr = [
    "dep:axum",
    "dep:axum-extra",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:openidconnect",
    "dep:mongodb",
    "dep:aws-sdk-s3",
    "dep:aws-config",
    "dep:tracing-subscriber",
    "dep:reqwest",
    "dep:meilisearch-sdk",
    "dep:jsonwebtoken",
    "dep:urlencoding",
    "dep:time",
    "dep:tower_governor",
    "dep:config",
    "dep:async-stream",
    "dep:qdrant-client",
    "dep:async-openai",
    "dep:gcp_auth",
    "dep:rustls",
    "dep:text-splitter",
    "dep:tiktoken-rs",
    "dep:tera",
    "dep:rmcp",
    "dep:schemars",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle
output-name = "lekton"

# The site root folder is where cargo-leptos generates all output
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
site-pkg-dir = "pkg"

# Tailwind CSS v4 input file
tailwind-input-file = "style/tailwind.css"

# Assets source dir. All files found here will be copied and synced to site-root.
assets-dir = "public"

# The IP and port where the server serves content
site-addr = "127.0.0.1:3000"

# The port for automatic reload monitoring
reload-port = 3001

# The browserlist query used for optimizing the CSS
browserquery = "defaults"

# The environment Leptos will run in
env = "DEV"

# The features to use when compiling the bin target
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
bin-default-features = false

# The features to use when compiling the lib target
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
lib-default-features = false

# The profile to use for the lib target when compiling for release
lib-profile-release = "wasm-release"
