[package]
name = "lekton-sync"
version = "0.6.0"
edition = "2021"
description = "CLI tool to sync markdown documents to a Lekton instance"

[[bin]]
name = "lekton-sync"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
