[package]
name = "lekton-sync"
version = "0.13.1"
authors = ["Davide Ghilardi"]
edition = "2021"
description = "CLI tool to sync markdown documents to a Lekton instance"
license = "AGPL-3.0-or-later"
repository = "https://github.com/dghilardi/lekton"
readme = "README.md"
keywords = ["lekton", "docs", "sync", "markdown", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lekton-sync"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
mime_guess = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
